Report/video otomatik ekleme, JAR düzeltmeleri, Mac/Win launcher